--- a/CHANGELOG.org
+++ b/CHANGELOG.org
@@ -1,5 +1,5 @@
 * Changelog
-** 0.2.18 (WIP)
+** 0.2.18
 Upgrading for the release of Allegro 5.2.8.  Along with adding new definitions, added older ones never added and exported symbols to package accidentally left out.
 
 *** Graphics
@@ -22,7 +22,6 @@ Upgrading for the release of Allegro 5.2.8.  Along with adding new definitions, 
 ~ALLEGRO_AUDIO_RECORDER_EVENT~
 ~ALLEGRO_AUDIO_DEVICE~
 ~ALLEGRO_PLAYMODE_LOOP_ONCE~
-
 ~al_play_audio_stream~
 ~al_play_audio_stream_f~
 ~al_register_sample_identifier~
@@ -32,7 +31,7 @@ Upgrading for the release of Allegro 5.2.8.  Along with adding new definitions, 
 ~al_unlock_sample_id~
 ~al_set_sample_instance_channel_matrix~
 ~al_set_audio_stream_channel_matrix~
-
+~al_get_audio_stream_played_samples~
 ~al_create_audio_recorder~
 ~al_start_audio_recorder~
 ~al_stop_audio_recorder~
@@ -40,11 +39,9 @@ Upgrading for the release of Allegro 5.2.8.  Along with adding new definitions, 
 ~al_get_audio_recorder_event~
 ~al_get_audio_recorder_event_source~
 ~al_destroy_audio_recorder~
-
 ~al_get_num_audio_output_devices~
 ~al_get_audio_output_device~
 ~al_get_audio_device_name~
-
 ~al_fill_silence~
 
 *** Video addon
