--- a/CHANGELOG.org
+++ b/CHANGELOG.org
@@ -1,4 +1,6 @@
 * Changelog
+** 0.2.21
+Quick release, forgot to add missing package symbol exports
 ** 0.2.20
 Adds new functionality from Allegro 5.2.9 and few other missing functions
 ** 0.2.19
