--- a/CHANGELOG.org
+++ b/CHANGELOG.org
@@ -1,5 +1,7 @@
 * Changelog
 ** 0.2.23
+Fix for the interface running crossplatform.  Issue with the GUI code needing to run in the main thread on Darwin machines
+** 0.2.23
 Fix for audio system init and export initialize-system
 ** 0.2.22
 Add missing export and remove nonexistent export related to ~Display~
