--- a/CHANGELOG.org
+++ b/CHANGELOG.org
@@ -1,7 +1,7 @@
 * Changelog
+** 0.2.25
+Add new keycodes.  Cleanup the interface a little and add joystick initialization
 ** 0.2.24
-Add new keycodes.  Cleanup the interface a little.
-** 0.2.23
 Fix for the interface running crossplatform.  Issue with the GUI code needing to run in the main thread on Darwin machines
 ** 0.2.23
 Fix for audio system init and export initialize-system
