--- a/CHANGELOG.org
+++ b/CHANGELOG.org
@@ -1,4 +1,6 @@
 * Changelog
+** 0.2.26
+Fix and add missing color addon functions.  Added stream-file-position accesors for binary-stream
 ** 0.2.25
 Add new keycodes.  Cleanup the interface a little and add joystick initialization
 ** 0.2.24
