Added links to tutorials in readme

--- a/README.org
+++ b/README.org
@@ -55,6 +55,9 @@ Various projects I've found using cl-liballegro.  Feel free to add items onto th
 ** Templates
 - [[https://github.com/lockie/cookiecutter-lisp-game][cookiecutter-lisp-game]] - Cookiecutter template for a game
 
+** Tutorials
+- [[https://gitlab.com/lockie/cl-fast-ecs/-/wikis/tutorial-1][Gamedev in Lisp part 1]], [[https://gitlab.com/lockie/cl-fast-ecs/-/wikis/tutorial-2][part 2]] - Tutorials on ECS game architecture featuring cl-liballegro
+
 * General
 [[https://user-images.githubusercontent.com/2598904/96662425-f3c4cf00-1313-11eb-9e59-807e27697c20.png]]
 
